bugfix: create form was modified with scrollable option on mobile devices

--- a/Frontend/src/app/notes/create-notes/create-notes.component.scss
+++ b/Frontend/src/app/notes/create-notes/create-notes.component.scss
@@ -1,23 +1,22 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-
-
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
 
+
 form {
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: linear-gradient(var(--content-bg-deg), var(--content-bg-color-1), var(--content-bg-color-2));
     box-shadow: 0 0 6px 5px var(--content-shadow-color);
-    width: min(97%, 450px);
+    width: min(88%, 450px);
     border-radius: 0.5rem;
     padding: 1rem;
-
+    margin-top: 30px;
+    margin-bottom: 150px;
 }
 
 .img-video-url {
@@ -33,7 +32,7 @@ form {
 }
 
 .mat-icon {
-    transform: scale(1.5);
+    transform: scale(1.2);
     color: var(--color-accent);
 }
 
@@ -67,6 +66,12 @@ label {
     margin-right: 1rem;
 }
 
+.checkboxes {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .success {
     color: var(--color-accent);
     display: flex;
@@ -78,4 +83,18 @@ label {
 .success .mat-icon {
     color: var(--color-success);
     font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+    .form {
+        -ms-overflow-style: none;
+        /* Internet Explorer 10+ */
+        scrollbar-width: none;
+        /* Firefox */
+    }
+
+    .form::-webkit-scrollbar {
+        display: none;
+        /* Safari and Chrome */
+    }
 }
