--- a/Frontend/src/app/notes/show-notes/show-notes.component.scss
+++ b/Frontend/src/app/notes/show-notes/show-notes.component.scss
@@ -11,7 +11,7 @@
 .note {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    width: min(97%, 680px);
+    width: min(96%, 680px);
     display: flex;
     flex-direction: column;
     justify-content: center;
